hphp/hack/test/typecheck/references/refs_in_array/intrinsic.php.exp
File "intrinsic.php", line 5, characters 12-14:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
